--- a/Javascript_Typescript/react_snippets.ipynb
+++ b/Javascript_Typescript/react_snippets.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -46,6 +48,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,6 +100,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,6 +136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -165,6 +170,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,6 +199,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -233,6 +240,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -240,10 +248,167 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mediator Patter in React\n",
+    "\n",
+    "https://itnext.io/improve-state-management-in-react-with-mediator-design-pattern-db632cbe6475\n",
+    "\n",
+    "Mediator Pattern to Decouple State Management in React\n",
+    "Managing the state of multiple components in a React application can be a challenging task, but one solution that has gained popularity is the use of the Mediator pattern. By creating a mediator component that manages the application state and handles communication between components, the Mediator pattern promotes loose coupling, scalability, reusability, maintainability, and testability.\n",
+    "\n",
+    "Rather than having components communicate directly with each other, the mediator component acts as a central hub that facilitates communication between components. This approach allows for better separation of concerns, making it easier to add new features or modify existing ones without disrupting the entire application.\n",
+    "\n",
+    "Using the Mediator pattern as a state management solution in React applications also promotes modularization, making it easier to reuse components in other parts of the application or even in other applications.\n",
+    "\n",
+    "Here are the general steps to implement the Mediator pattern as a state management solution in a React application:\n",
+    "\n",
+    "- Identify the state that needs to be managed: Identify the state that needs to be managed and which components need access the state.\n",
+    "- Create a Mediator component: Create a Mediator component that will manage the state and handle communication between the components. The Mediator component will store the state and update it when necessary.\n",
+    "- Pass the Mediator as a prop: Pass the Mediator component as a prop to the components that need access to the state.\n",
+    "- Implement event handlers: Implement event handlers in the components that need to update the state. These event handlers should trigger a function in the Mediator component that updates the state.\n",
+    "- Use the state: Use the state stored in the Mediator component in the components that need access to it.\n",
+    "\n",
+    "\n",
+    "Let’s take a look at an example code snippet that demonstrates how to implement the Mediator pattern as a state management solution in a React application:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Mediator component\n",
+    "const Mediator = ({ children }) => {\n",
+    "  const [state, setState] = useState({ count: 0 });\n",
+    "\n",
+    "  const incrementCount = () => {\n",
+    "    setState({ count: state.count + 1 });\n",
+    "  };\n",
+    "\n",
+    "  const decrementCount = () => {\n",
+    "    setState({ count: state.count - 1 });\n",
+    "  };\n",
+    "\n",
+    "  // Pass state and event handlers as props to children components\n",
+    "  return children({ count: state.count, incrementCount, decrementCount });\n",
+    "};\n",
+    "\n",
+    "// Child component\n",
+    "const Counter = ({ count, incrementCount, decrementCount }) => {\n",
+    "  return (\n",
+    "    <div>\n",
+    "      <p>Count: {count}</p>\n",
+    "      <button onClick={incrementCount}>Increment</button>\n",
+    "      <button onClick={decrementCount}>Decrement</button>\n",
+    "    </div>\n",
+    "  );\n",
+    "};\n",
+    "\n",
+    "// Parent component\n",
+    "const App = () => {\n",
+    "  return (\n",
+    "    <Mediator>\n",
+    "      {({ count, incrementCount, decrementCount }) => (\n",
+    "        <Counter count={count} incrementCount={incrementCount} decrementCount={decrementCount} />\n",
+    "      )}\n",
+    "    </Mediator>\n",
+    "  );\n",
+    "};"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing the Mediator Pattern to Context API as State Management\n",
+    "While both the Mediator Pattern and Context API can be used for state management in a React application, there are some key differences between them.\n",
+    "\n",
+    "The Mediator Pattern promotes loose coupling between components, while the Context API promotes tighter coupling between components. In the Mediator Pattern, components communicate through a Mediator object, while in the Context API, components directly access the shared state.\n",
+    "\n",
+    "At the same time, the Mediator Pattern can be more complex to implement than the Context API, as it requires creating a custom hook and managing state within the Mediator object. The Context API is simpler to implement, as it only requires creating a Context object and providing a Provider component.\n",
+    "\n",
+    "Both the Mediator Pattern and Context API have their strengths and weaknesses, and the choice of which to use will depend on the application's specific requirements.\n",
+    "\n",
+    "The Mediator Pattern is well-suited for applications with complex state management requirements and a large number of components that need to communicate with each other. It can provide a more modular and flexible approach to state management, allowing for easier maintenance and extensibility.\n",
+    "\n",
+    "The Context API is better suited for applications with simpler state management requirements and a smaller number of components. It can provide a simpler and more straightforward approach to state management, allowing for faster development and easier code maintenance.\n",
+    "\n",
+    "It’s important to understand the differences between the Mediator Pattern and Context API for state management in React. The Mediator Pattern offers greater flexibility for complex state management, while the Context API provides a simpler approach for applications with fewer components. Ultimately, the choice of which to use depends on the application's specific requirements."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### JWT Authentication with React Router\n",
+    "https://dev.to/sanjayttg/jwt-authentication-in-react-with-react-router-1d03"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import axios from \"axios\";\n",
+    "import { createContext, useContext, useEffect, useMemo, useState } from \"react\";\n",
+    "\n",
+    "const AuthContext = createContext();\n",
+    "\n",
+    "const AuthProvider = ({ children }) => {\n",
+    "  // State to hold the authentication token\n",
+    "  const [token, setToken_] = useState(localStorage.getItem(\"token\"));\n",
+    "\n",
+    "  // Function to set the authentication token\n",
+    "  const setToken = (newToken) => {\n",
+    "    setToken_(newToken);\n",
+    "  };\n",
+    "\n",
+    "  useEffect(() => {\n",
+    "    if (token) {\n",
+    "      axios.defaults.headers.common[\"Authorization\"] = \"Bearer \" + token;\n",
+    "      localStorage.setItem('token',token);\n",
+    "    } else {\n",
+    "      delete axios.defaults.headers.common[\"Authorization\"];\n",
+    "      localStorage.removeItem('token')\n",
+    "    }\n",
+    "  }, [token]);\n",
+    "\n",
+    "  // Memoized value of the authentication context\n",
+    "  const contextValue = useMemo(\n",
+    "    () => ({\n",
+    "      token,\n",
+    "      setToken,\n",
+    "    }),\n",
+    "    [token]\n",
+    "  );\n",
+    "\n",
+    "  // Provide the authentication context to the children components\n",
+    "  return (\n",
+    "    <AuthContext.Provider value={contextValue}>{children}</AuthContext.Provider>\n",
+    "  );\n",
+    "};\n",
+    "\n",
+    "export const useAuth = () => {\n",
+    "  return useContext(AuthContext);\n",
+    "};\n",
+    "\n",
+    "export default AuthProvider;"
    ]
   }
  ],
