--- a/Git/git_snippets.ipynb
+++ b/Git/git_snippets.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -17,6 +18,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,6 +44,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,6 +85,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,20 +99,23 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Screen%20Shot%202022-10-31%20at%205.15.56%20PM.png)"
+    "![git_diff.png](git_diff.png)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Screen%20Shot%202022-10-31%20at%205.18.58%20PM.png)"
+    "![git_diff2.png](git_diff2.png)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -138,12 +145,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.14 64-bit",
-   "language": "python",
-   "name": "python3"
+   "display_name": "JavaScript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "name": "python",
+   "name": "javascript",
    "version": "3.9.16"
   },
   "orig_nbformat": 4,
