--- a/Javascript_Typescript/react_snippets.ipynb
+++ b/Javascript_Typescript/react_snippets.ipynb
@@ -410,6 +410,132 @@
     "\n",
     "export default AuthProvider;"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Introducing useAsyncEffect\n",
+    "\n",
+    "https://medium.com/front-end-weekly/simplifying-react-async-workflow-exploring-the-power-of-useasynceffect-166252ed50f7\n",
+    "\n",
+    "The useAsyncEffect hook is a custom hook that allows us to perform async operations and safely handle potential state updates on unmounted components. It's a combination of useEffect with async/await operations, and it checks whether the component is still mounted before proceeding with state updates or further tasks.\n",
+    "\n",
+    "When you initiate an asynchronous operation in a React component, there’s a chance that the component might unmount before the operation completes. If the async operation tries to update the component’s state after the component has unmounted, React will throw a warning: “Can’t perform a React state update on an unmounted component.”\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import { useEffect } from 'react';\n",
+    "import type { DependencyList } from 'react';\n",
+    "\n",
+    "const isAsyncGenerator = (v: any): v is AsyncGenerator => {\n",
+    "  return Object.prototype.toString.call(v) === '[object AsyncGenerator]';\n",
+    "};\n",
+    "\n",
+    "function useAsyncEffect(\n",
+    "  effect: () => Promise<void> | AsyncGenerator<void, void, void>,\n",
+    "  deps?: DependencyList\n",
+    ") {\n",
+    "  useEffect(() => {\n",
+    "    const task = effect();\n",
+    "    let isCancelled = false;\n",
+    "\n",
+    "    void (async () => {\n",
+    "      if (isAsyncGenerator(task)) {\n",
+    "        for await (const _ of task) {\n",
+    "          if (isCancelled) {\n",
+    "            break;\n",
+    "          }\n",
+    "        }\n",
+    "      } else {\n",
+    "        await task;\n",
+    "      }\n",
+    "    })();\n",
+    "\n",
+    "    return () => {\n",
+    "      isCancelled = true;\n",
+    "    };\n",
+    "  }, deps);\n",
+    "}\n",
+    "export default useAsyncEffect;\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At a high level, useAsyncEffect accepts an async function (effect) and an optional dependency list. The async function can be a simple Promise or an Async Generator function. The hook initiates the async function within a useEffect hook and tracks whether the component is still mounted using a cancelled flag. If the component unmounts, the useEffect cleanup function sets cancelled to true, which in the case of an Async Generator function causes the asynchronous operation to stop.\n",
+    "\n",
+    "Here's an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import { useState, useEffect } from 'react';\n",
+    "import useAsyncEffect from './useAsyncEffect';\n",
+    "\n",
+    "const sleep = (ms: number) =>\n",
+    "  new Promise<void>((resolve) => setTimeout(resolve, ms));\n",
+    "\n",
+    "function ExampleComponent() {\n",
+    "  const [data, setData] = useState({});\n",
+    "\n",
+    "  useAsyncEffect(async function* () {\n",
+    "    await sleep(2000);\n",
+    "    yield;\n",
+    "    setData({});\n",
+    "  }, []);\n",
+    "\n",
+    "  // useEffect(() => {\n",
+    "  //   void (async () => {\n",
+    "  //     await sleep(2000);\n",
+    "  //     setData({});\n",
+    "  //   })();\n",
+    "  // }, []);\n",
+    "\n",
+    "  return null;\n",
+    "}\n",
+    "\n",
+    "function App() {\n",
+    "  const [showExample, setShowExample] = useState(true);\n",
+    "  useEffect(() => {\n",
+    "    setTimeout(() => {\n",
+    "      setShowExample(false);\n",
+    "    }, 1000);\n",
+    "  }, []);\n",
+    "\n",
+    "  return showExample ? <ExampleComponent /> : null;\n",
+    "}\n",
+    "\n",
+    "export default App;\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, we simply use a timer to unmount ExampleComponent after 1000 milliseconds. If we were to use the regular useEffect, it would result in the error mentioned earlier. However, if we use useAsyncEffect, we can avoid it. This is thanks to the powerful capability of Async Generator functions, where you can use yield after any asynchronous operation to determine if the current effect is still valid and decide whether to continue executing further.\n",
+    "\n",
+    "The useAsyncEffect hook offers several benefits:\n",
+    "\n",
+    "- Prevents Memory Leaks: By ensuring that async operations do not attempt to update the state of unmounted components, useAsyncEffect prevents potential memory leaks in your React application.\n",
+    "- Encourages Cleaner Code: The useAsyncEffect hook encourages you to structure your async operations in a way that is clean and easy to understand.\n",
+    "- Increases Performance: By limiting unnecessary operations, useAsyncEffect can also help increase the performance of your React application.\n"
+   ]
   }
  ],
  "metadata": {
