--- a/Javascript_Typescript/typescript_snippets.ipynb
+++ b/Javascript_Typescript/typescript_snippets.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,6 +49,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,6 +87,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -129,6 +133,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -540,6 +545,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -577,6 +583,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -584,6 +591,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -614,6 +622,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -651,6 +660,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1312,6 +1322,40 @@
     "\n",
     "const keys = getAllKeys(obj);\n",
     "console.log(keys); // [\"a\" | \"f\" | \"h\" | \"a.b\" | \"a.c\" | \"a.c.d\" | \"a.c.e\" | \"f.g\"]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Returning Never with nullish coelescense\n",
+    "\n",
+    "Tired of writing if statements every time you need to check if something's defined?\n",
+    "\n",
+    "Make a little 'raise' function to throw an error, and inline it with a nullish coalescing operator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "react"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "// this fn will never return, just throw and error\n",
+    "const raise = (err: string): never => {\n",
+    "  throw new Error(err);\n",
+    "};\n",
+    "\n",
+    "// we can now use raise to ensure 'id' is provided to params\n",
+    "const Page = (props: { params: { id?: string;}}) => {\n",
+    "  const id = props.params.id ?? raise('No id provided!');\n",
+    "};"
    ]
   }
  ],
