--- a/Javascript_Typescript/typescript_snippets.ipynb
+++ b/Javascript_Typescript/typescript_snippets.ipynb
@@ -1357,6 +1357,176 @@
     "  const id = props.params.id ?? raise('No id provided!');\n",
     "};"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Next.js typed response\n",
+    "\n",
+    "lost the source file "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type NextApiRequest = { body: any }\n",
+    "type NextApiResponse = { json: (arg: unknown) => void }\n",
+    "\n",
+    "const getSessionUserId = (): number | null => {\n",
+    "  return Math.random() || null\n",
+    "}\n",
+    "\n",
+    "const parseNextApiRequestBody = <B = object>(\n",
+    "  request: NextApiRequest\n",
+    "): Partial<B> | null => {\n",
+    "  try {\n",
+    "    const parsedBody = JSON.parse(request.body as string) as unknown\n",
+    "    return typeof parsedBody === 'object' ? parsedBody : null\n",
+    "  } catch {\n",
+    "    return null\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "type Expand<T> = T extends ((...args: any[]) => any) | Date | RegExp\n",
+    "  ? T\n",
+    "  : T extends ReadonlyMap<infer K, infer V>\n",
+    "  ? Map<Expand<K>, Expand<V>>\n",
+    "  : T extends ReadonlySet<infer U>\n",
+    "  ? Set<Expand<U>>\n",
+    "  : T extends ReadonlyArray<unknown>\n",
+    "  ? `${bigint}` extends `${keyof T & any}`\n",
+    "    ? { [K in keyof T]: Expand<T[K]> }\n",
+    "    : Expand<T[number]>[]\n",
+    "  : T extends object\n",
+    "  ? { [K in keyof T]: Expand<T[K]> }\n",
+    "  : T\n",
+    "\n",
+    "type Options = {\n",
+    "  requiresAuthentication?: boolean\n",
+    "  parseBody?: boolean\n",
+    "}\n",
+    "\n",
+    "type CallbackOptions<B = never, O extends Options = Options> = {\n",
+    "  request: NextApiRequest\n",
+    "  response: NextApiResponse\n",
+    "} & (O extends { requiresAuthentication: true } ? { userId: string } : object) &\n",
+    "  (O extends { parseBody: true } ? { parsedRequestBody: B } : object)\n",
+    "\n",
+    "const handleRequest =\n",
+    "  <O extends Options>(options: O) =>\n",
+    "  <B = never>(callback: (options: CallbackOptions<B, O>) => Promise<void>) =>\n",
+    "  async (request: NextApiRequest, response: NextApiResponse) => {\n",
+    "    // If the user is not found, we can return a response right away.\n",
+    "    const userId = getSessionUserId()\n",
+    "\n",
+    "    if (options.requiresAuthentication && !userId) {\n",
+    "      return void response.json({ error: 'missing authentication' })\n",
+    "    }\n",
+    "\n",
+    "    // Check if the request's body is valid.\n",
+    "    const parsedRequestBody = options.parseBody\n",
+    "      ? parseNextApiRequestBody(request)\n",
+    "      : undefined\n",
+    "\n",
+    "    if (options.parseBody && !parsedRequestBody) {\n",
+    "      return void response.json({ error: 'invalid payload' })\n",
+    "    }\n",
+    "\n",
+    "    return callback({\n",
+    "      request,\n",
+    "      response,\n",
+    "      ...(options.parseBody ? { parsedRequestBody } : {}),\n",
+    "      ...(options.requiresAuthentication ? { userId } : {}),\n",
+    "    } as CallbackOptions<B, O>)\n",
+    "  }\n",
+    "\n",
+    "const handlerWithBodyType = handleRequest({ parseBody: true })<{\n",
+    "  hello: string\n",
+    "}>(async (options) => {\n",
+    "  // `options.parsedRequestBody` is of type `{ hello: string }`\n",
+    "  void typeof options?.parsedRequestBody\n",
+    "  //                   ^?\n",
+    "})\n",
+    "\n",
+    "const handlerWithAuth = handleRequest({ requiresAuthentication: true })(\n",
+    "  async (options) => {\n",
+    "    // `options` contains `request` and `response` and `userId` and not `parsedRequestBody` as expected.\n",
+    "    const expandedOptions: Expand<typeof options> = options\n",
+    "    //    ^?\n",
+    "  }\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Type utilities\n",
+    "\n",
+    "from react-typescript-tutorial by Matt Pocock\n",
+    "https://github.com/total-typescript/react-typescript-tutorial/blob/main/src/helpers/type-utils.ts\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export type Expect<T extends true> = T;\n",
+    "export type ExpectTrue<T extends true> = T;\n",
+    "export type ExpectFalse<T extends false> = T;\n",
+    "export type IsTrue<T extends true> = T;\n",
+    "export type IsFalse<T extends false> = T;\n",
+    "\n",
+    "export type Equal<X, Y> = (<T>() => T extends X ? 1 : 2) extends <\n",
+    "  T,\n",
+    ">() => T extends Y ? 1 : 2\n",
+    "  ? true\n",
+    "  : false;\n",
+    "export type NotEqual<X, Y> = true extends Equal<X, Y> ? false : true;\n",
+    "\n",
+    "// https://stackoverflow.com/questions/49927523/disallow-call-with-any/49928360#49928360\n",
+    "export type IsAny<T> = 0 extends 1 & T ? true : false;\n",
+    "export type NotAny<T> = true extends IsAny<T> ? false : true;\n",
+    "\n",
+    "export type Debug<T> = { [K in keyof T]: T[K] };\n",
+    "export type MergeInsertions<T> = T extends object\n",
+    "  ? { [K in keyof T]: MergeInsertions<T[K]> }\n",
+    "  : T;\n",
+    "\n",
+    "export type Alike<X, Y> = Equal<MergeInsertions<X>, MergeInsertions<Y>>;\n",
+    "\n",
+    "/**\n",
+    " * Expect that one type is assignable to another.\n",
+    " *\n",
+    " * @example\n",
+    " *\n",
+    " * type tests = [\n",
+    " *   // Expect that `number` is assignable to `1`.\n",
+    " *   Expect<Extends<1, number>>,\n",
+    " *   // Expect that `abc` is assignable to `string`\n",
+    " *   Expect<Extends<'abc', string>>,\n",
+    " * ];\n",
+    " */\n",
+    "export type Extends<VALUE, EXPECTED> = EXPECTED extends VALUE ? true : false;\n",
+    "export type ExpectValidArgs<\n",
+    "  FUNC extends (...args: any[]) => any,\n",
+    "  ARGS extends any[],\n",
+    "> = ARGS extends Parameters<FUNC> ? true : false;\n",
+    "\n",
+    "export type UnionToIntersection<U> = (\n",
+    "  U extends any ? (k: U) => void : never\n",
+    ") extends (k: infer I) => void\n",
+    "  ? I\n",
+    "  : never;"
+   ]
   }
  ],
  "metadata": {
