react + TS updates

--- a/Javascript_Typescript/react_snippets.ipynb
+++ b/Javascript_Typescript/react_snippets.ipynb
@@ -536,6 +536,203 @@
     "- Encourages Cleaner Code: The useAsyncEffect hook encourages you to structure your async operations in a way that is clean and easy to understand.\n",
     "- Increases Performance: By limiting unnecessary operations, useAsyncEffect can also help increase the performance of your React application.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 4 useful custom hooks \n",
+    "\n",
+    "https://blog.bitsrc.io/supercharge-your-react-development-with-these-useful-custom-hooks-ade487a4501a\n",
+    "\n",
+    "### useToggle Hook\n",
+    "\n",
+    "The useToggle hook is used to toggle a boolean value between true and false. It can be used in situations where we want to show or hide content based on a user’s interaction. Let’s take a look at an example of how to use the useToggle hook below.\n",
+    "\n",
+    "In this example, we are using the useToggle hook to toggle the value of showContent between true and false when the “Toggle Content” button is clicked. The useToggle hook returns an array with two values: the current value of the boolean and a function to toggle the value.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import { useState } from \"react\";\n",
+    "\n",
+    "function useToggle(initialValue = false) {\n",
+    "  const [value, setValue] = useState(initialValue);\n",
+    "\n",
+    "  const toggle = () => {\n",
+    "    setValue(!value);\n",
+    "  };\n",
+    "\n",
+    "  return [value, toggle];\n",
+    "}\n",
+    "\n",
+    "function App() {\n",
+    "  const [showContent, toggleContent] = useToggle(false);\n",
+    "\n",
+    "  return (\n",
+    "    <div>\n",
+    "      <button onClick={toggleContent}>Toggle Content</button>\n",
+    "      {showContent && <p>Here's some content!</p>}\n",
+    "    </div>\n",
+    "  );\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### useLocalStorage\n",
+    "The useLocalStorage hook is used to store and retrieve data from the browser’s local storage. This can be useful in situations where we want to persist data across page refreshes. Here’s an example of how to use the useLocalStorage hook below.\n",
+    "\n",
+    "In this example, we are using the useLocalStorage hook to store the count value in the browser’s local storage. The count value will be retrieved from local storage on page load and updated whenever the “Increment Count” button is clicked. The useLocalStorage hook returns an array with two values: the current value of the data stored in local storage and a function to update the value.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import { useState } from \"react\";\n",
+    "\n",
+    "function useLocalStorage(key, initialValue) {\n",
+    "  const [value, setValue] = useState(() => {\n",
+    "    const storedValue = localStorage.getItem(key);\n",
+    "    return storedValue !== null ? JSON.parse(storedValue) : initialValue;\n",
+    "  });\n",
+    "\n",
+    "  const setLocalStorageValue = (newValue) => {\n",
+    "    setValue(newValue);\n",
+    "    localStorage.setItem(key, JSON.stringify(newValue));\n",
+    "  };\n",
+    "\n",
+    "  return [value, setLocalStorageValue];\n",
+    "}\n",
+    "\n",
+    "function App() {\n",
+    "  const [count, setCount] = useLocalStorage(\"count\", 0);\n",
+    "\n",
+    "  const incrementCount = () => {\n",
+    "    setCount(count + 1);\n",
+    "  };\n",
+    "\n",
+    "  return (\n",
+    "    <div>\n",
+    "      <p>Count: {count}</p>\n",
+    "      <button onClick={incrementCount}>Increment Count</button>\n",
+    "    </div>\n",
+    "  );\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### useMediaQuery\n",
+    "\n",
+    "The useMediaQuery hook is used to detect changes in the browser’s viewport size. This can be useful in situations where we want to conditionally render content based on the user’s screen size. Here’s an example of how to use the useMediaQuery hook:\n",
+    "\n",
+    "In this example, we are using the useMediaQuery hook to detect changes in the viewport size and conditionally render content based on whether the screen is considered small or large. The useMediaQuery hook returns a boolean value indicating whether the query matches the current viewport size.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "function useMediaQuery(query) {\n",
+    "  const [matches, setMatches] = useState(false)\n",
+    "\n",
+    "  useEffect(() => {\n",
+    "    const mediaQuery = window.matchMedia(query)\n",
+    "    setMatches(mediaQuery.matches)\n",
+    "\n",
+    "    const handleMediaQueryChange = (event) => {\n",
+    "      setMatches(event.matches)\n",
+    "    }\n",
+    "\n",
+    "    mediaQuery.addListener(handleMediaQueryChange)\n",
+    "\n",
+    "    return () => {\n",
+    "      mediaQuery.removeListener(handleMediaQueryChange)\n",
+    "    }\n",
+    "  })\n",
+    "}\n",
+    "\n",
+    "function App() {\n",
+    "  const isSmallScreen = useMediaQuery(\"(max-width: 768px)\")\n",
+    "\n",
+    "  return <div>{isSmallScreen ? <p>Small Screen</p> : <p>Large Screen</p>}</div>\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### useDebounce\n",
+    "\n",
+    "The useDebounce hook is used to delay the execution of a function until a specified amount of time has passed since the last invocation of the function. This can be useful in situations where we want to limit the number of times a function is called, such as when handling user input. Here’s an example of how to use the useDebounce hook:\n",
+    "\n",
+    "In this example, we are using the useDebounce hook to delay the execution of the handleSearchTermChange function until 500ms have passed since the last invocation. The useDebounce hook returns the debounced value of the input, which will only be updated after the specified delay has passed since the last change.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import { useState, useEffect } from \"react\"\n",
+    "\n",
+    "function useDebounce(value, delay) {\n",
+    "  const [debouncedValue, setDebouncedValue] = useState(value)\n",
+    "\n",
+    "  useEffect(() => {\n",
+    "    const timeoutId = setTimeout(() => {\n",
+    "      setDebouncedValue(value)\n",
+    "    }, delay)\n",
+    "    return () => {\n",
+    "      clearTimeout(timeoutId)\n",
+    "    }\n",
+    "  }, [value, delay])\n",
+    "\n",
+    "  return debouncedValue\n",
+    "}\n",
+    "\n",
+    "function App() {\n",
+    "  const [searchTerm, setSearchTerm] = useState(\"\")\n",
+    "  const debouncedSearchTerm = useDebounce(searchTerm, 500)\n",
+    "\n",
+    "  const handleSearchTermChange = (event) => {\n",
+    "    setSearchTerm(event.target.value)\n",
+    "  }\n",
+    "\n",
+    "  return (\n",
+    "    <div>\n",
+    "      <input type=\"text\" value={searchTerm} onChange={handleSearchTermChange} />\n",
+    "      <p>Debounced Search Term: {debouncedSearchTerm}</p>\n",
+    "    </div>\n",
+    "  )\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
