--- a/Javascript_Typescript/typescript_snippets.ipynb
+++ b/Javascript_Typescript/typescript_snippets.ipynb
@@ -1527,6 +1527,116 @@
     "  ? I\n",
     "  : never;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Iterating over objects\n",
+    "\n",
+    "https://oida.dev/typescript-iterating-over-objects/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type Person = {\n",
+    "  name: string,\n",
+    "  age: number\n",
+    "}\n",
+    "\n",
+    "\n",
+    "function printPerson(p: Person) {\n",
+    "  const you: Person = {\n",
+    "    name: \"Reader\",\n",
+    "    age: NaN\n",
+    "  };\n",
+    "\n",
+    "  Object.keys(p).forEach((k) => {\n",
+    "    console.log(k, you[k])\n",
+    "  })  \n",
+    "}\n",
+    "\n",
+    "const me = {\n",
+    "  name: \"Stefan\",\n",
+    "  age: 40,\n",
+    "  website: \"https://fettblog.eu\"\n",
+    "}\n",
+    "\n",
+    "printPerson(me);\n",
+    "\n",
+    "// If Object.keys(p) returns an array of type keyof Person[], you will be able to access\n",
+    "// other objects of Person, too. This might not add up. In our example, we just print undefined. \n",
+    "// But what if you try to do something with those values. This will break at runtime.\n",
+    "\n",
+    "//TypeScript prevents you from scenarios like this. It’s honest and says: Well, you think it might\n",
+    "// be keyof Person, but in reality, it can be so much more.\n",
+    "\n",
+    "//Only type guards can help you:\n",
+    "\n",
+    "function isKey<T>(x: T, k: PropertyKey): k is keyof T {\n",
+    "  return k in x\n",
+    "}\n",
+    "\n",
+    "function printPerson2(p: Person) {\n",
+    "  Object.keys(p).forEach((k) => {\n",
+    "      if(isKey(p, k)) console.log(k, p[k]) // All fine!\n",
+    "  })\n",
+    "}\n",
+    "\n",
+    "// With For/in loops and generics, typescript can have much more effectie type narrowing\n",
+    "\n",
+    "function printPerson3<T extends Person>(p: T) {\n",
+    "  for (let k in p) {\n",
+    "    console.log(k, p[k]) // This works\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unique Array Utility Type\n",
+    "\n",
+    "https://ja.nsommer.dk/articles/type-checked-unique-arrays.html\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type InArray<T, X> =\n",
+    "  // See if X is the first element in array T\n",
+    "  T extends readonly [X, ...infer _Rest]\n",
+    "    ? true\n",
+    "    // If not, is X the only element in T?\n",
+    "    : T extends readonly [X]\n",
+    "      ? true\n",
+    "      // No match, check if there's any elements left in T and loop recursive\n",
+    "      : T extends readonly [infer _, ...infer Rest]\n",
+    "        ? InArray<Rest, X>\n",
+    "        // There's nothing left in the array and we found no match\n",
+    "        : false\n",
+    "        \n",
+    "type UniqueArray<T> =\n",
+    "  T extends readonly [infer X, ...infer Rest]\n",
+    "    // We've just extracted X from T, having Rest be the remaining values.\n",
+    "    // Let's see if X is in Rest, and if it is, we know we have a duplicate\n",
+    "    ? InArray<Rest, X> extends true\n",
+    "      ? ['Encountered value with duplicates:', X]\n",
+    "      // X is not duplicated, move on to check the next value, and see\n",
+    "      // if that's also unique.\n",
+    "      : readonly [X, ...UniqueArray<Rest>]\n",
+    "    // T did not extend [X, ...Rest], so there's nothing to do - just return T\n",
+    "    : T"
+   ]
   }
  ],
  "metadata": {
